{
    "name": "InputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "4fc2df29-c9d7-4efa-a892-d3450e1b75db",
            "actions": [
                {
                    "name": "SelectPrev",
                    "type": "Button",
                    "id": "57f9f682-f02d-475a-86a0-875c241e09a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectNext",
                    "type": "Button",
                    "id": "c9758b65-d0cc-4695-b70a-78e31067f404",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "1262f61f-d1fd-4c3c-bbd3-ffc4b5ca5fb8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "19f1cbcb-4e30-4225-94d5-f90b6fd2f269",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectPrev",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0c51337-527f-449d-b7e1-e5b5647eedda",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectNext",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d23618e-f9bb-4a8a-a438-4673c9a13c3b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}